// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`detectReferences - Snapshot Regression English prose samples testDetect.en.txt with contextAware: true 1`] = `
"A Johannine expression ([Jn 10.17–18;2 Nephi 2.8|John 10:17-18; 2 Nephi 2:8]n), here combined with <i>loved the world</i> ([Jn 3.16|John 3:16]) and <i>draw all men unto him</i> ([Jn 12.32;3 Ne 27.14|John 12:32; 3 Nephi 27:14]n). The first two expressions are paired again at [Ether 12.33|Ether 12:33].
react-dom.development.js:65 Warning: Invalid DOM property \`class\`. Did you mean Narration.js:761 [Isa 55.1;2 Ne 9.50|Isaiah 55:1; 2 Nephi 9:50]
Narration.js:761 God does not say this yet, but he will later; see [Mt 7.23|Matthew 7:23] ([3 Ne 14.23|3 Nephi 14:23]); 2 Nephi 25.41; [Lk 13.27|Luke 13:27]. Nephi transforms God’s general summons at [Isa 55.1|Isaiah 55:1] into a personal invitation to come to Christ (see [1 Ne 8.15–18|1 Nephi 8:15-18]n), in the process replacing Isaiah’s “wine and milk” with <i>milk and honey</i>, a common OT description of the bounties of the promised land (note that Jacob had earlier quoted [Isa 55.1–2|Isaiah 55:1-2] at [2 Ne 9.50–51|2 Nephi 9:50-51]).
Narration.js:761 <i>“All ye ends of the earth”</i> is a non-biblical phrase that occurs eight times in the BoM, nearly always in invitations to repent or come to Christ. It is indicative of the Nephite writers’ awareness of the global scope of their message (but see also [Isa 45.22;Morm 3.18;Moro 10.24|Isaiah 45:22; Mormon 3:18; Moroni 10:24]for prophets addressing “all <i>“the”</i> ends of the earth”).
Narration.js:761 A Johannine expression ([Jn 10.17–18;2 Nephi 2.8|John 10:17-18; 2 Nephi 2:8]n), here combined with <i>loved the world</i> ([Jn 3.16|John 3:16]) and <i>draw all men unto him</i> ([Jn 12.32;3 Ne 27.14|John 12:32; 3 Nephi 27:14]n). The first two expressions are paired again at [Ether 12.33|Ether 12:33].
Narration.js:761 [Isa 55.1;2 Ne 9.50|Isaiah 55:1; 2 Nephi 9:50]
Narration.js:761 God does not say this yet, but he will later; see [Mt 7.23|Matthew 7:23] ([3 Ne 14.23|3 Nephi 14:23]); 2 Nephi 25.41; [Lk 13.27|Luke 13:27]. Nephi transforms God’s general summons at [Isa 55.1|Isaiah 55:1] into a personal invitation to come to Christ (see [1 Ne 8.15–18|1 Nephi 8:15-18]n), in the process replacing Isaiah’s “wine and milk” with <i>milk and honey</i>, a common OT description of the bounties of the promised land (note that Jacob had earlier quoted [Isa 55.1–2|Isaiah 55:1-2] at [2 Ne 9.50–51|2 Nephi 9:50-51]).
Narration.js:761 <i>“All ye ends of the earth”</i> is a non-biblical phrase that occurs eight times in the BoM, nearly always in invitations to repent or come to Christ. It is indicative of the Nephite writers’ awareness of the global scope of their message (but see also [Isa 45.22;Morm 3.18;Moro 10.24|Isaiah 45:22; Mormon 3:18; Moroni 10:24]for prophets addressing “all <i>“the”</i> ends of the earth”).

“A Marvelous Work and a Wonder” • ([Isa. 11:11; 29:14|Isaiah 11:11; 29:14]; refer in this text to [2 Ne. 21:10–12;2 Ne. 27:26|2 Nephi 21:10-12; 27:26])
[2 Ne. 21:10–12|2 Nephi 21:10-12] The Gathering of Israel ([Isaiah 11.10–16|Isaiah 11:10-16]) And in that day there shall be a root of Jesse, which shall stand for an ensign of the people; to it shall the Gentiles seek; and his rest shall be glorious. And it shall come to pass in that day that the Lord shall set his hand again the second time to recover the remnant of his people which shall be left, from Assyria, and from Egypt, and from Pathros, and from Cush, and from Elam, and from Shinar, and from Hamath, and from the islands of the sea. And he shall set up an ensign for the nations, and shall assemble the outcasts of Israel, and gather together the dispersed of Judah from the four corners of the earth.
“will proceed to do a marvelous work and a wonder” • [Isa 11.11;2 Ne 21.11; 29.1|Isaiah 11:11; 2 Nephi 21:11; 29:1]
The combination of lost and fallen state with Messiah and six hundred years echoes Lehi’s prophecy at [1 Ne 10.4–6|1 Nephi 10:4-6].
The marvelous work that God will do in bringing forth his words refers to the coming forth of the BoM, which is intended to convince both Jews and Gentiles to believe in Christ (BoM title page).
Being judged by God’s words (personified here) also appears at [Jn 12.48;2 Ne 29.11|John 12:48; 2 Nephi 29:11]."
`;

exports[`detectReferences - Snapshot Regression English prose samples vvtest-en.txt with contextAware: false 1`] = `
"He sought for, obtained, and heeded the word of the Lord given through the living prophet (see [Alma 43:23–26|Alma 43:23-26]).
He was vitally concerned for the welfare of those who served under his command (see vv. 18–21, 48:7–10, 49:18–20, 50:1–4).
He used strategy to overcome his enemies (see [Alma 43:27–35|Alma 43:27-35]).
He was firm for the right, yet quick to forgive (see [Alma 44:1–20|Alma 44:1-20]).
He was patriotic in spirit and prayerful in attitude (see [Alma 46:11–20|Alma 46:11-20]).
He was a noble man, a man of God (see [Alma 48:11–18|Alma 48:11-18]).


While it is often called “the vision,” [Doctrine and Covenants 76|Doctrine and Covenants 76] is a series of visions combined into one grand revelation: a vision of the glory of the Son (vv. 20–24); a vision of the fall of Satan and the sufferings of those who follow him, who are sons of perdition (vv. 25–49); a vision of those who inherit
the celestial glory and come forth in the resurrection of the just (vv. 50–70); a vision of those who inherit the terrestrial glory (vv. 71–80); and a vision of
those who inherit the telestial glory (vv. 81–89). A comparison of the three degrees of glory is also given."
`;

exports[`detectReferences - Snapshot Regression English prose samples vvtest-en.txt with contextAware: true 1`] = `
"He sought for, obtained, and heeded the word of the Lord given through the living prophet (see [Alma 43:23–26|Alma 43:23-26]).
He was vitally concerned for the welfare of those who served under his command (see [vv. 18–21, 48:7–10, 49:18–20, 50:1–4|Alma 44:18-21; 48:7-10; 49:18-20; 50:1-4]).
He used strategy to overcome his enemies (see [Alma 43:27–35|Alma 43:27-35]).
He was firm for the right, yet quick to forgive (see [Alma 44:1–20|Alma 44:1-20]).
He was patriotic in spirit and prayerful in attitude (see [Alma 46:11–20|Alma 46:11-20]).
He was a noble man, a man of God (see [Alma 48:11–18|Alma 48:11-18]).


While it is often called “the vision,” [Doctrine and Covenants 76|Doctrine and Covenants 76] is a series of visions combined into one grand revelation: a vision of the glory of the Son ([vv. 20–24|Doctrine and Covenants 76:20-24]); a vision of the fall of Satan and the sufferings of those who follow him, who are sons of perdition ([vv. 25–49|Doctrine and Covenants 76:25-49]); a vision of those who inherit
the celestial glory and come forth in the resurrection of the just ([vv. 50–70|Doctrine and Covenants 76:50-70]); a vision of those who inherit the terrestrial glory ([vv. 71–80|Doctrine and Covenants 76:71-80]); and a vision of
those who inherit the telestial glory ([vv. 81–89|Doctrine and Covenants 76:81-89]). A comparison of the three degrees of glory is also given."
`;

exports[`detectReferences - Snapshot Regression Korean prose samples vvtest-ko.txt with contextAware: true 1`] = `
"[교리와 성약 76편|Doctrine and Covenants 76장 1~119절]은 흔히 “시현”으로 불리는데 이것은 다
음과 같은 여러 가지 시현이 하나의 큰 시현으로 연결된 것이
다. 아들의 영광에 관한 시현.(20~24절) 사탄의 타락과 그를
따르는 멸망의 자식의 고통, 해의 영광을 상속받고 의인의 부
활 때 일어나는 사람들에 관한 시현(50~70절), 달의 영광을 상
속받는 사람들에 관한 시현(71~80절), 별의 영광을 상속받는
사람에 관한 시현(81~89절). 이 세 가지 등급의 영광의 비교도
나와 있다."
`;
